# tabtabtab-oss

./: .gitignore  README.md  extension_constants.py  extension_dependencies.py  extension_directory.py  extension_interface.py  llm.py  llm_interface.py  pyproject.toml  requirements.txt  sample_extension.py  sse_interface.py
.github/workflows/: reload_extensions.yml
extensions/: mcp_extension_lib.py  sample_extension.py
extensions/address_extension/: address_extension.py
extensions/calendar_mcp_extension/: README.md  calendar_mcp_extension.py
extensions/fashion_ideas/: README.md  fashion_ideas.py
extensions/notion_mcp_extension/: README.md  notion_mcp_extension.py
extensions/rudra_extension/: rudra_extension.py
extensions/sample_context_extension/: README.md  sample_context_extension.py
extensions/sample_extension/: sample_extension.py
extensions/translation_extension/: README.md  __init__.py  translation_extension.py
local_runner/: main.py  sample_launch.json
